--- a/src/solvers/Makefile
+++ b/src/solvers/Makefile
@@ -170,6 +170,7 @@ SRC = $(BOOLEFORCE_SRC) \
       refinement/refine_arrays.cpp \
       refinement/string_builtin_function.cpp \
       refinement/string_refinement.cpp \
+      refinement/string_constraint.cpp \
       refinement/string_refinement_util.cpp \
       refinement/string_constraint_generator_code_points.cpp \
       refinement/string_constraint_generator_comparison.cpp \
