--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -36,7 +36,7 @@ set(booleforce_source
     ${CMAKE_CURRENT_SOURCE_DIR}/sat/satcheck_booleforce.cpp
 )
 set(minibdd_source
-    ${CMAKE_CURRENT_SOURCE_DIR}/miniBDD/example.cpp
+        ../util/miniBDD/example.cpp
 )
 
 file(GLOB_RECURSE sources "*.cpp" "*.h")
