--- a/.travis.yml
+++ b/.travis.yml
@@ -229,7 +229,7 @@ jobs:
         - cmake --build build -- -j4
       script: (cd build; ctest -V -L CORE -j2)
 
-    # cmake build using g++-7
+    # cmake build using g++-7, enable CMAKE_USE_CUDD
     - stage: Test different OS/CXX/Flags
       os: linux
       sudo: false
@@ -251,7 +251,7 @@ jobs:
       install:
         - ccache -z
         - ccache --max-size=1G
-        - cmake -H. -Bbuild '-DCMAKE_BUILD_TYPE=Release'  '-DCMAKE_CXX_COMPILER=/usr/bin/g++-7'
+        - cmake -H. -Bbuild '-DCMAKE_BUILD_TYPE=Release'  '-DCMAKE_CXX_COMPILER=/usr/bin/g++-7' '-DCMAKE_USE_CUDD=true'
         - git submodule update --init --recursive
         - cmake --build build -- -j4
       script: (cd build; ctest -V -L CORE -j2)
