New implementation of guards using BDDs
This is not used yet in CBMC.
The aim is to specify at compile time whether we want to use this new
implementation or the old one.

Using BDDs ensures the guards are always in some "simple" form.

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,6 +1,11 @@
 file(GLOB_RECURSE sources "*.cpp" "*.h")
 
 
+if(NOT DEFINED CMAKE_USE_CUDD)
+    list(REMOVE_ITEM sources "${CMAKE_CURRENT_SOURCE_DIR}/guard_bdd.cpp")
+    list(REMOVE_ITEM sources "${CMAKE_CURRENT_SOURCE_DIR}/guard_bdd.h")
+endif()
+
 # based on https://cmake.org/pipermail/cmake/2010-July/038015.html
 find_package(Git)
 if(GIT_FOUND)
